--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="top-banner">
     <div class="banner-left">
       <!-- local image file -->
-      <img class="brand-icon" src="c:\Users\Admin\Downloads\images (1).jfif" alt="Swiggy logo">
+      <img class="brand-icon" src=".\assets\images(1).jfif" alt="Swiggy logo">
       <div class="banner-text">
         <div>Get the Swiggy app</div>
         <div class="small">for the best experience</div>
@@ -29,7 +29,7 @@
         </div>
         <div class="hero-img">
           <!-- same local image used as illustration -->
-          <img src="c:\Users\Admin\Downloads\swiggy1.jpg" alt="illustration">
+          <img src=".\assets\swiggy1.jpg" alt="illustration">
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
 
     <div class="input-box">
       <button id="countryBtn" class="country" type="button">
-        <img src="c:\Users\Admin\Downloads\images.jfif" alt="flag" class="flag-img">
+        <img src=".\assets\images.jfif" alt="flag" class="flag-img">
         <span class="code">+91</span>
         <span class="dash">-</span>
       </button>
