--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="top-banner">
     <div class="banner-left">
       <!-- local image file -->
-      <img class="brand-icon" src=".\assets\images(1).jfif" alt="Swiggy logo">
+      <img class="brand-icon" src=".\assets\swiggy 2 png.png" alt="Swiggy logo">
       <div class="banner-text">
         <div>Get the Swiggy app</div>
         <div class="small">for the best experience</div>
